--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -1,20 +1,19 @@
-# Instruct Shiny Server to run applications as the user "shiny"
-run_as ubuntu;
-
-# Define a server that listens on port 3838
 server {
+  # Instruct this server to listen on port 3838
   listen 3838;
-  
-  # Define a location at the base URL
-  location /myapp {
+
+  # Define the location available at the base URL
+  location / {
+
+    # Run this location in 'site_dir' mode, which hosts the entire directory
+    # tree at '/srv/shiny-server'
+    site_dir /srv/shiny-server;
     
-    # Host the directory of Shiny Apps stored in this directory
-    site_dir /srv/shiny-server/myapp;
-    
-    # Log all Shiny output files in this directory
+    # Define where we should put the log files for this location
     log_dir /var/log/shiny-server;
     
+    # Should we list the contents of a (non-Shiny-App) directory when the user 
+    # visits the corresponding URL?
     directory_index on;
-    app_init_timeout 250;
   }
 }
